[gd_scene load_steps=6 format=3 uid="uid://c1he8kika8fof"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_0mmkp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5td4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqulr"]
bg_color = Color(0.682353, 0.141176, 0.133333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1im14"]
bg_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3kqx"]
bg_color = Color(1, 1, 1, 1)

[node name="Boss" type="Node2D"]
position = Vector2(0, 240)
script = ExtResource("1_0mmkp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -176)
scale = Vector2(0.25, 0.25)

[node name="ProgressBarShield" type="ProgressBar" parent="."]
offset_left = -792.0
offset_top = -448.0
offset_right = -627.0
offset_bottom = -416.0
theme_override_styles/background = SubResource("StyleBoxFlat_t5td4")
max_value = 50.0
show_percentage = false

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -824.0
offset_top = -440.0
offset_right = 213.0
offset_bottom = 67.0
grow_horizontal = 2
scale = Vector2(0.135885, 0.947368)
theme_override_styles/fill = SubResource("StyleBoxFlat_xqulr")
show_percentage = false

[node name="Timer" type="Timer" parent="ProgressBar"]
wait_time = 0.4

[node name="DamageBar" type="ProgressBar" parent="ProgressBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_1im14")
theme_override_styles/fill = SubResource("StyleBoxFlat_v3kqx")
show_percentage = false

[node name="BattleLog" type="Label" parent="."]
offset_left = -624.0
offset_top = -432.0
offset_right = -320.0
offset_bottom = -387.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "dewdwe"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="ProgressBar/Timer" to="." method="_on_timer_timeout"]
